# antoliny_daily

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
antoliny_daily/: conftest.py
antoliny_daily/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
antoliny_daily/static/js/: animation.js  observeAnimation.js
antoliny_daily/templates/: base.html
antoliny_daily/templates/includes/: footer.html  nav.html
antoliny_daily/templates/pages/: home.html
antoliny_daily/theme/: apps.py
antoliny_daily/theme/static_src/src/: styles.css
antoliny_daily/users/: adapters.py  apps.py  forms.py  models.py  views.py
antoliny_daily/users/migrations/: 0001_initial.py
antoliny_daily/users/tests/: factories.py  test_admin.py  test_forms.py  test_models.py  test_urls.py  test_views.py
compose/local/django/: Dockerfile  start
compose/production/django/: Dockerfile
compose/production/traefik/: traefik.yml
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
docs/pycharm/: configuration.rst
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
requirements/: local.txt
