[project]
name = "antoliny-daily"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

[dependency-groups]
base = [
    "python-slugify==8.0.4",
    "Pillow==11.3.0",
    "psycopg[binary]==3.2.10",
    "argon2-cffi==25.1.0",
    "whitenoise==6.11.0",
    "hiredis==3.2.1",
    "django==5.2.7",
    "django-environ==0.12.0",
    "dj-database-url==3.0.1",
    "django-tailwind==4.2.0",
]

lint = [
    "ruff==0.13.3",
]

local = [
    {include-group = "base"},
    {include-group = "lint"},
    "Werkzeug[watchdog]==3.1.3",
    "ipdb==0.13.13",
    "pytest==8.4.2",
    "pytest-sugar==1.1.1",
    "coverage==7.10.7",
    "pre-commit==4.3.0",
    "factory-boy==3.3.3",
    "django-debug-toolbar==6.0.0",
    "django-extensions==4.1",
    "django-coverage-plugin==3.2.0",
    "pytest-django==4.11.1",
]

production = [
    {include-group = "base"},
    "gunicorn==23.0.0",
    "django-anymail[mailgun]==13.1",
]
